[gd_scene load_steps=13 format=2]

[ext_resource path="res://Friend.tscn" type="PackedScene" id=1]
[ext_resource path="res://Floor.tscn" type="PackedScene" id=2]
[ext_resource path="res://CropTileMap.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Images/torielfont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Seed Shack.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Sounds/Abstraction - Three Red Hearts - Three Red Hearts.mp3" type="AudioStream" id=6]
[ext_resource path="res://Assets/Images/bg.png" type="Texture" id=7]
[ext_resource path="res://Assets/Images/Tutorial.gd" type="Script" id=8]

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Assets/ShadowsIntoLight-Regular.ttf"

[sub_resource type="DynamicFont" id=8]
size = 50
font_data = SubResource( 7 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 240.25, 332.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 186, 230.5 )

[node name="Tutorial" type="Node2D"]
script = ExtResource( 8 )

[node name="Labels" type="Node2D" parent="."]

[node name="Label" type="Label" parent="Labels"]
margin_left = 134.0
margin_top = -388.0
margin_right = 624.0
margin_bottom = -291.0
custom_fonts/font = ExtResource( 4 )
text = "[A] and [D] to Move"
__meta__ = {
"_edit_lock_": true
}

[node name="Label2" type="Label" parent="Labels"]
margin_left = 746.0
margin_top = -705.0
margin_right = 1295.0
margin_bottom = -508.0
custom_fonts/font = ExtResource( 4 )
text = "[Space] To Jump/Double Jump"
align = 1
autowrap = true

[node name="Label3" type="Label" parent="Labels"]
margin_left = 1682.0
margin_top = -1087.0
margin_right = 2231.0
margin_bottom = -890.0
custom_fonts/font = ExtResource( 4 )
text = "Left Arrow [<-] to Midair Dash"
align = 1
autowrap = true

[node name="Label11" type="Label" parent="Labels"]
margin_left = 2370.0
margin_top = -270.0
margin_right = 2919.0
margin_bottom = -73.0
custom_fonts/font = ExtResource( 4 )
text = "Double Jump and Dash to get across"
align = 1
autowrap = true

[node name="Label4" type="Label" parent="Labels"]
margin_left = 3084.0
margin_top = -1040.0
margin_right = 3603.0
margin_bottom = -843.0
custom_fonts/font = ExtResource( 4 )
text = "Press Right Arrow [->] to Attack"
align = 1
autowrap = true

[node name="Label5" type="Label" parent="Labels"]
margin_left = 3686.0
margin_top = -1193.0
margin_right = 4348.0
margin_bottom = -996.0
custom_fonts/font = ExtResource( 4 )
text = "Harvest Crops for Upgrades"
align = 1
autowrap = true

[node name="Label10" type="Label" parent="Labels"]
margin_left = 4106.0
margin_top = -1027.0
margin_right = 4495.0
margin_bottom = -830.0
custom_fonts/font = SubResource( 8 )
text = "Walking on farmland plants new crops"
align = 1
autowrap = true

[node name="Label6" type="Label" parent="Labels"]
margin_left = 4829.0
margin_top = -1215.0
margin_right = 5491.0
margin_bottom = -1018.0
custom_fonts/font = ExtResource( 4 )
text = "Grab Seeds from the Shack"
align = 1
autowrap = true

[node name="Label7" type="Label" parent="Labels"]
margin_left = 6099.0
margin_top = -1132.0
margin_right = 6761.0
margin_bottom = -935.0
custom_fonts/font = ExtResource( 4 )
text = "Seeds can recover lost Farmland"
align = 1
autowrap = true

[node name="Label8" type="Label" parent="Labels"]
margin_left = 5623.0
margin_top = -393.0
margin_right = 6285.0
margin_bottom = -196.0
custom_fonts/font = ExtResource( 4 )
text = "Keep Ghosts from your Crops!"
align = 1
autowrap = true

[node name="Label9" type="Label" parent="Labels"]
margin_left = 4094.0
margin_top = -141.0
margin_right = 4756.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 4 )
text = "vv Start vv"
align = 1
autowrap = true

[node name="CropTileMap" parent="." instance=ExtResource( 3 )]
tile_data = PoolIntArray( -917442, 4, 0, -917441, 4, 0, -65442, 0, 0, -65441, 0, 0, -65440, 0, 0, -65439, 0, 0 )

[node name="Floor" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( -2162578, 2, 0, -2097042, 2, 0, -2031506, 2, 0, -1965970, 2, 0, -1900518, 2, 0, -1900517, 2, 0, -1900516, 2, 0, -1900515, 2, 0, -1900514, 2, 0, -1900513, 2, 0, -1900512, 2, 0, -1900511, 2, 0, -1900510, 2, 0, -1900509, 2, 0, -1900508, 2, 0, -1900507, 2, 0, -1900506, 2, 0, -1900505, 2, 0, -1900504, 2, 0, -1900503, 2, 0, -1900502, 2, 0, -1900501, 2, 0, -1900500, 2, 0, -1900499, 2, 0, -1900498, 2, 0, -1900497, 2, 0, -1900496, 2, 0, -1900495, 2, 0, -1900494, 2, 0, -1900493, 2, 0, -1900492, 2, 0, -1900491, 2, 0, -1900490, 2, 0, -1900489, 2, 0, -1900434, 2, 0, -1834982, 2, 0, -1834953, 2, 0, -1834898, 2, 0, -1769446, 2, 0, -1769417, 2, 0, -1769362, 2, 0, -1703910, 2, 0, -1703881, 2, 0, -1703826, 2, 0, -1638374, 2, 0, -1638345, 2, 0, -1638290, 2, 0, -1572838, 2, 0, -1572809, 2, 0, -1572754, 2, 0, -1507302, 2, 0, -1507273, 2, 0, -1507218, 2, 0, -1441766, 2, 0, -1441737, 2, 0, -1441682, 2, 0, -1376230, 2, 0, -1376201, 2, 0, -1376146, 2, 0, -1310694, 2, 0, -1310665, 2, 0, -1310610, 2, 0, -1245174, 2, 0, -1245173, 2, 0, -1245172, 2, 0, -1245171, 2, 0, -1245170, 2, 0, -1245169, 2, 0, -1245168, 2, 0, -1245167, 2, 0, -1245166, 2, 0, -1245165, 2, 0, -1245164, 2, 0, -1245163, 2, 0, -1245162, 2, 0, -1245161, 2, 0, -1245160, 2, 0, -1245159, 2, 0, -1245158, 2, 0, -1245129, 2, 0, -1245074, 2, 0, -1179638, 2, 0, -1179593, 2, 0, -1179538, 2, 0, -1114102, 2, 0, -1114057, 2, 0, -1114002, 2, 0, -1048566, 2, 0, -1048466, 2, 0, -983030, 2, 0, -982930, 2, 0, -917494, 2, 0, -917394, 2, 0, -851958, 2, 0, -851947, 2, 0, -851946, 2, 0, -851945, 2, 0, -851944, 2, 0, -851943, 2, 0, -851942, 2, 0, -851941, 2, 0, -851940, 2, 0, -851939, 2, 0, -851918, 2, 0, -851917, 2, 0, -851916, 2, 0, -851915, 2, 0, -851914, 2, 0, -851913, 2, 0, -851912, 2, 0, -851911, 2, 0, -851910, 2, 0, -851909, 2, 0, -851908, 2, 0, -851907, 2, 0, -851906, 0, 0, -851905, 0, 0, -851904, 2, 0, -851903, 2, 0, -851902, 2, 0, -851901, 2, 0, -851900, 2, 0, -851899, 2, 0, -851898, 2, 0, -851897, 2, 0, -851896, 2, 0, -851895, 2, 0, -851894, 2, 0, -851893, 2, 0, -851892, 2, 0, -851891, 2, 0, -851890, 2, 0, -851889, 2, 0, -851888, 2, 0, -851887, 2, 0, -851886, 2, 0, -851885, 2, 0, -851884, 2, 0, -851883, 2, 0, -851882, 2, 0, -851881, 2, 0, -851880, 2, 0, -851879, 2, 0, -851878, 2, 0, -851877, 2, 0, -851876, 2, 0, -851875, 2, 0, -851874, 2, 0, -851873, 2, 0, -851872, 2, 0, -851871, 2, 0, -851870, 2, 0, -851869, 2, 0, -851868, 1, 0, -851867, 2, 0, -851866, 2, 0, -851865, 2, 0, -851864, 2, 0, -851863, 2, 0, -851858, 2, 0, -786422, 2, 0, -786411, 2, 0, -786403, 2, 0, -786382, 2, 0, -786381, 2, 0, -786380, 2, 0, -786379, 2, 0, -786378, 2, 0, -786377, 2, 0, -786356, 2, 0, -786322, 2, 0, -720886, 2, 0, -720875, 2, 0, -720867, 2, 0, -720846, 2, 0, -720845, 2, 0, -720844, 2, 0, -720843, 2, 0, -720842, 2, 0, -720841, 2, 0, -720820, 2, 0, -720786, 2, 0, -655350, 2, 0, -655339, 2, 0, -655331, 2, 0, -655310, 2, 0, -655309, 2, 0, -655308, 2, 0, -655307, 2, 0, -655306, 2, 0, -655305, 2, 0, -655284, 2, 0, -655250, 2, 0, -589814, 2, 0, -589803, 2, 0, -589795, 2, 0, -589774, 2, 0, -589773, 2, 0, -589772, 2, 0, -589771, 2, 0, -589770, 2, 0, -589769, 2, 0, -589748, 2, 0, -589714, 2, 0, -524288, 2, 0, -524287, 2, 0, -524286, 2, 0, -524285, 2, 0, -524284, 2, 0, -524283, 2, 0, -524282, 2, 0, -524281, 2, 0, -524280, 2, 0, -524279, 2, 0, -524278, 2, 0, -524267, 2, 0, -524259, 2, 0, -524238, 2, 0, -524237, 2, 0, -524236, 2, 0, -524235, 2, 0, -524234, 2, 0, -524233, 2, 0, -524212, 2, 0, -524178, 2, 0, -458752, 2, 0, -458731, 2, 0, -458723, 2, 0, -458722, 2, 0, -458721, 2, 0, -458702, 2, 0, -458701, 2, 0, -458700, 2, 0, -458699, 2, 0, -458698, 2, 0, -458697, 2, 0, -458676, 2, 0, -458642, 2, 0, -393216, 2, 0, -393195, 2, 0, -393187, 2, 0, -393166, 2, 0, -393165, 2, 0, -393164, 2, 0, -393163, 2, 0, -393162, 2, 0, -393161, 2, 0, -393140, 2, 0, -393106, 2, 0, -327680, 2, 0, -327665, 2, 0, -327664, 2, 0, -327663, 2, 0, -327659, 2, 0, -327651, 2, 0, -327630, 2, 0, -327629, 2, 0, -327628, 2, 0, -327627, 2, 0, -327626, 2, 0, -327625, 2, 0, -327614, 2, 0, -327613, 2, 0, -327612, 2, 0, -327611, 2, 0, -327610, 2, 0, -327609, 2, 0, -327608, 2, 0, -327607, 2, 0, -327606, 2, 0, -327605, 2, 0, -327604, 2, 0, -327570, 2, 0, -262144, 2, 0, -262123, 2, 0, -262115, 2, 0, -262094, 2, 0, -262093, 2, 0, -262092, 2, 0, -262091, 2, 0, -262090, 2, 0, -262089, 2, 0, -262078, 2, 0, -262034, 2, 0, -196608, 2, 0, -196587, 2, 0, -196579, 2, 0, -196558, 2, 0, -196557, 2, 0, -196556, 2, 0, -196555, 2, 0, -196554, 2, 0, -196553, 2, 0, -196542, 2, 0, -196498, 2, 0, -131072, 2, 0, -131051, 2, 0, -131043, 2, 0, -131022, 2, 0, -131021, 2, 0, -131020, 2, 0, -131019, 2, 0, -131018, 2, 0, -131017, 2, 0, -131006, 2, 0, -130962, 2, 0, -65536, 2, 0, -65535, 2, 0, -65534, 2, 0, -65533, 2, 0, -65532, 2, 0, -65531, 2, 0, -65530, 2, 0, -65529, 2, 0, -65528, 2, 0, -65527, 2, 0, -65526, 2, 0, -65525, 2, 0, -65524, 2, 0, -65523, 2, 0, -65522, 2, 0, -65521, 2, 0, -65520, 2, 0, -65519, 2, 0, -65518, 2, 0, -65517, 2, 0, -65516, 2, 0, -65515, 2, 0, -65507, 2, 0, -65506, 2, 0, -65505, 2, 0, -65504, 2, 0, -65503, 2, 0, -65502, 2, 0, -65501, 2, 0, -65500, 2, 0, -65499, 2, 0, -65498, 2, 0, -65497, 2, 0, -65496, 2, 0, -65495, 2, 0, -65494, 2, 0, -65493, 2, 0, -65492, 2, 0, -65491, 2, 0, -65490, 2, 0, -65489, 2, 0, -65488, 2, 0, -65487, 2, 0, -65486, 2, 0, -65485, 2, 0, -65484, 2, 0, -65483, 2, 0, -65482, 2, 0, -65481, 2, 0, -65470, 2, 0, -65426, 2, 0, 66, 2, 0, 71, 2, 0, 72, 2, 0, 73, 2, 0, 74, 2, 0, 75, 2, 0, 76, 2, 0, 77, 2, 0, 78, 2, 0, 79, 2, 0, 80, 2, 0, 81, 2, 0, 82, 2, 0, 83, 2, 0, 84, 2, 0, 85, 2, 0, 86, 2, 0, 87, 2, 0, 88, 2, 0, 89, 2, 0, 90, 2, 0, 91, 2, 0, 92, 2, 0, 93, 2, 0, 94, 0, 0, 95, 0, 0, 96, 0, 0, 97, 0, 0, 98, 2, 0, 99, 2, 0, 100, 2, 0, 101, 2, 0, 102, 2, 0, 103, 2, 0, 104, 2, 0, 105, 2, 0, 106, 2, 0, 107, 2, 0, 108, 2, 0, 109, 2, 0, 110, 2, 0 )

[node name="Seed Shack" parent="." instance=ExtResource( 5 )]
position = Vector2( 5172, -930 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0
autoplay = true

[node name="Friend" parent="." instance=ExtResource( 1 )]
position = Vector2( 510, -351 )
cam_right = 10000

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 3439, -627 )
scale = Vector2( 7.36852, 1.836 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="FightStartArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FightStartArea"]
position = Vector2( 6779.25, -394.5 )
shape = SubResource( 1 )

[node name="FightLocation" type="Node2D" parent="."]
position = Vector2( 5700, -100 )

[node name="StartArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartArea"]
position = Vector2( 4391, 327.5 )
shape = SubResource( 2 )

[connection signal="seed_planted" from="CropTileMap" to="Friend" method="_on_CropTileMap_seed_planted"]
[connection signal="upgrade" from="CropTileMap" to="Friend" method="_on_CropTileMap_upgrade"]
[connection signal="is_farmland" from="Floor" to="Friend" method="_on_Floor_is_farmland"]
[connection signal="crop_harvested" from="Friend" to="CropTileMap" method="_on_Friend_crop_harvested"]
[connection signal="is_crop_here" from="Friend" to="CropTileMap" method="_on_Friend_is_crop_here"]
[connection signal="ray_find_tile" from="Friend" to="Floor" method="_on_Friend_ray_find_tile"]
[connection signal="body_entered" from="FightStartArea" to="." method="_on_FightStartArea_body_entered"]
[connection signal="body_entered" from="StartArea" to="." method="_on_StartArea_body_entered"]
